--- a/chapter1.tex
+++ b/chapter1.tex
@@ -17,7 +17,7 @@ homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
 defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
 Hydrogen molecule, where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, and the
-gravitational coupling constant $a_{G} = \hbar c/Gm_{H} m_{p}$ , so the speed c is eliminated. This conforms with
+gravitational coupling constant $a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}$ , so the speed c is eliminated. This conforms with
 Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
@@ -27,30 +27,32 @@ Let us associate the visible universe of mass M with a matter-wave, of wavelengt
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
 and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
 (\lambdabar_{e} /l\prime_{micro} )^{2}$ :
-$$\lambdabar_{e} /\lambdabar_{M} \sim (R/ \lambdabar_{e} )^{2} \sim ( \lambdabar_e / \lambdabar_X )^{4} \sim (\lambda_ {CMB} / \lambdabar_e )^{8} \sim ( \lambdabar_{e} / \lambdabar_{W} )^{16} \sim (2r_{H} / \lambdabar_{e} )^{32} \sim ( \lambdabar_{e} / l_{Gl} )^{64} \sim ( \lambdabar_{str} / \lambdabar_{e} )^{128} \sim 2^{256}$$
-where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is octuple,
+\begin{equation}
+$$\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32} \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}$$
+\end{equation}
+where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
-dramatic appearance of the Eddington Large Number, and permits to approach each physical length.
-In particular, the relation $R/ \lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e} )^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
+dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
+In particular, the relation $R/\lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
-background (CNB), whose wavelength is defined by $( l_{CNB} / l_{CMB} ) 3 = 11/4$, we have $$R/ \lambdabar_e \sim
+background (CNB), whose wavelength is defined by $(l_{CNB} / l_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
 ( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer $$R/r_{H(0)} \sim
 (4 \prec l_{CMB} /r_{H(0)} )^{4}$$ precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
-In particular, it was noted [1] that a G is of order W 8 , where W is the mass ratio W boson-
+In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where W is the mass ratio W boson-
 Electron. With the above R value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of W and Z:
 $R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4$
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
-will be pulled to the ppb range in Section III, by intervention of canonical mathematical constants.
+will be pulled to the ppb range in Chapter 3, by intervention of canonical mathematical constants.
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
-the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/cm H$ , we obtain the double relation:
-$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \hbar c/Gm_{e} m_{p}$
+the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , we obtain the double relation:
+$$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
@@ -224,7 +226,7 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx frac{4\pi^{p}}{p_{0}} \Leftrightarrow t_{K
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section III.V).
+range, with $\Gamma$, the Atiyah Constant (section 3.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
 graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
@@ -238,7 +240,7 @@ characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relatio
 \hbar 3 /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
 $$t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}$$
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
-292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
+292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 $$(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})}) = \sqrt{(GG_{F})}$$
@@ -249,7 +251,7 @@ value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
 value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$(2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3}
-\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} m^3 s^-2$$
+\Leftrightarrow G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2}$$
 This value will be confirmed, in the ppb range, in Section III.
 
 \section {The omnipresence of the Kotov cycle in astrophysics}
@@ -326,7 +328,7 @@ shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurab
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
-\caption{Same as Fig. 2, for N = 11 sizes («diameters») of the solar system (with c = 1 and the $\pi$
+\caption{Same as Fig. 2, for N = 11 sizes «diameters» of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
 \end{figure}
@@ -395,9 +397,9 @@ discoverer of Relativity: 'use 4D space but do not confound Space and Time' has 
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 $$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
-but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
-10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
+but it took 9 years to get the current article published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
+links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
+10^{-27} kg \cdot m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. This writes:
 $$t{\hbar,\rho_{c} ,G} = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}$$
 This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
@@ -414,8 +416,8 @@ $$l{\hbar,\rho_{c},G_{F}} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^
 Now, the following mandatory c-free times are close each over to $0.7\%$:
 $$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
-This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
-the holic dimension (see below) n = 30, to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
+This would be the periodic time of a Large Cosmologic cycle, which matches with Topological Axis at n = 30;
+the holic dimension (see below), to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
 where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
