--- a/chapter1.tex
+++ b/chapter1.tex
@@ -27,9 +27,7 @@ Let us associate the visible universe of mass M with a matter-wave, of wavelengt
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
 and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
 (\lambdabar_{e} /l\prime_{micro} )^{2}$ :
-\begin{equation}
-$$\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32} \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}$$
-\end{equation}
+$$\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \\ \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32} \sim (\lambdabar_{e}/ l_{Gl} )^{64} \\ \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}$$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
