--- a/references.bib
+++ b/references.bib
@@ -5,14 +5,14 @@ month = {04},
 pages = {},
 title = {Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology}
 }
-@article{article,
+@article{article1,
 author = {Sanchez, Francis and Kotov, Valery and Bizouard, Ch},
 year = {2019},
 month = {04},
 pages = {},
 title = {Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology}
 }
-@article{article,
+@article{article2,
 author = {A. Kotov, V and Sanchez, Francis and Bizouard, K},
 year = {2012},
 month = {06},
@@ -22,7 +22,7 @@ volume = {108},
 journal = {Bulletin of the Crimean Astrophysical Observatory},
 doi = {10.3103/S0190271712010123}
 }
-@article{article,
+@article{article3,
 author = {Sanchez, Francis and A Kotov, Valery and Bizouard, Ch},
 year = {2011},
 month = {01},
@@ -31,7 +31,7 @@ title = {Towards a synthesis of two cosmologies: The steady-state flickering Uni
 volume = {17},
 journal = {J. Cosmology}
 }
-@article{article,
+@article{article4,
 author = {A. Kotov, V and Scherrer, Philip and Hoeksema, Todd and I. Haneychuk, V and T. Tsap, T},
 year = {1992},
 month = {12},
@@ -39,7 +39,7 @@ pages = {293},
 title = {The Search for 160-MINUTE Oscillations in the Stanford and Crimean Solar Velocity Observations - 1974-1991},
 volume = {42}
 }
-@article{article,
+@article{article5,
 author = {M. Lyutyi, V and A. Kotov, V},
 year = {1990},
 month = {08},
@@ -55,7 +55,7 @@ month = {01},
 pages = {},
 title = {Optics and Photonics Applied to Communication and Processing}
 }
-@article{article,
+@article{article6,
 author = {J. Carr, Bernard and J. Rees, Martin},
 year = {1979},
 month = {04},
