--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@inproceedings{fm1,
+@inproceedings{fm2,
 author = {Sanchez, Francis and Kotov, Valery and Bizouard, Ch},
 year = {2019},
 month = {04},
@@ -66,50 +66,50 @@ journal = {Nature},
 doi = {10.1038/278605a0}
 }
 
-\bibitem{eddy} Eddington A.\,S. The mathematical
+@book{eddy} Eddington A.\,S. The mathematical
 theory of relativity. Cambridge University Press,
 Cambridge, 1924. % Here is referred book
 
-\bibitem{edd} Eddington A.\,S., The Fundamental Theory
+@book{edd} Eddington A.\,S., The Fundamental Theory
 Cambridge, 1946.
 % Here is referred book
 
-\bibitem{bondi}  Bondi~H. Negative mass in General 
+@article{bondi}  Bondi~H. Negative mass in General 
 Relativity. \textit{Review of Modern Physics}, 1957, 
 v.\,29\,(3), 423--428. % Here is referred article
 
-\bibitem{Pez} Pezzaglia W. Physical applications of 
+@misc{Pez} Pezzaglia W. Physical applications of 
 generalized Clifford Calculus: Papatetrou equations 
 and metamorphic curvature. arXiv: gr-qc/9710027. 
 % Here is referred electronic publication
 
-\bibitem{La2}  Lambiase G., Papini G.,  Scarpetta G. 
+@misc{La2}  Lambiase G., Papini G.,  Scarpetta G. 
 Maximal acceleration corrections to the Lamb shift
 of one electron atoms. \textit{Nuovo Cimento}, 
 v.\,B112, 1997, 1003. arXiv: hep-th/9702130.
 % Here is double paper-electronic published article
 
-\bibitem{Carr} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+@article{Carr} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 Nature 278, 605-612 (1979). % Here is referred book
 
-\bibitem{fm1} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
+@book{fm1} Francis M. Sanchez. Coherent Cosmology Vixra.org,1601.0011. Springer International Publishing AG
 2017. A. Tadjer et al. (eds.), Quantum Systems in Physics, Chemistry, and Biology, Progress in
 Theoretical Chemistry and Physics 30, pp. 375-407. DOI 10.1007/978-3-319-50255-7_23. % Here is referred book
 
-\bibitem{Bonvin} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
+@article{Bonvin} Bonvin V. Holicow, New cosmograil time delays of HE 0435-1223, arXiv: 1607.01790v2
 (2016). % Here is referred book
 
-\bibitem{fm2} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
+@article{fm3} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
 steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
 
-\bibitem{Bousso} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
+@article{Bousso} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
 
-\bibitem{Damour} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
+@article{Damour} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
 
-\bibitem{Carr} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
+@article{Carr} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 \textit{Nature} 278, 605-612 (1979). % Here is referred book
 
-\bibitem{Lyuty} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
+@article{Lyuty} Kotov V. A. and Lyuty V. M., “The 160-min. Periodicity in the optical and X-ray observations of
 extragalactic objects.” Compt. Rend. Acad. Sci. Paris 310, Ser. II, 743-748 (1990). Fossat, E.,
 Boumier, P., Corbard, T., et al., 2017. Astron. Astrophys., 604, A40, 1; DOI: 10.1051/0004-
 6361/201730460. Grec, G., Fossat, E., 1979. Astron. Astrophys., 77, 351. Kotov, V.A., 2013.
@@ -118,67 +118,67 @@ DOI:10.1007/s11038-018-9520-6. Sevin E., 1946. Compt. Rend. Acad. Sci. Paris, 22
 Kotov, V.A., 2018. Motion of the fast exoplanets. Astrophys. Space Sci. 363(3), 1-5; DOI:
 10.1007/s10509-018-3278-1. % Here is referred book
 
-\bibitem{Pdc} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
+@article{Pdc} \textit{Review of Particle Physics}. Particle Data Group, Phys. Rev. D98, 030001 (2018)
 
-\bibitem{Quinn} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
+@article{Quinn} Quinn T, Speake C, Parks H, Davis R. 2014 The BIPM measurements of the Newtonian
 constant of gravitation, G. Phil.Trans. R. Soc. A372: 20140032. % Here is referred book
 
-\bibitem{fm3} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
+@article{fm4} Sanchez F.M., “Towards the grand unified Holic Theory”. \textit{Current Issues in Cosmology}. Ed. J.-C.
 Pecker and J. Narlikar. Cambridge Univ. Press, 257-260 (2006).
 
-\bibitem{Kotov} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
+@article{Kotov} Kotov V. A. and Sanchez F.M., Solar 22 years cycle, \textit{Astrophysics and Space Science}, v.\, 362,
 Issue 1, article id.6, 6 pp. (2017).
 
-\bibitem{Tifft} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
+@article{Tifft} Tifft, W. G. (2006). "Redshift periodicities, The Galaxy-Quasar Connection". \textit{Astrophysics and
 Space Science} v.\,285 (2):429.
 
-\bibitem{Arp} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
+@article{Arp} Arp H., The origin of Companion Galaxies. \textit{Astrophysical Journal}, 496, 661-669 (1998).
 
-\bibitem{Nieto} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+@article{Nieto} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
 Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
 
-\bibitem{Borcherds} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
+@article{Borcherds} Borcherds, Richard, Monstruous Moonshine and Monstruous Lie Superalgebras. Invent.
 Math., 109: 405–444, (1992).
 
-\bibitem{Nieto} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
+@article{Nieto} Nieto M., and Anderson J., Using Early Data to Illuminate the Pioneer Anomaly, Pi Class.
 Quant. Grav. 22 (2005) 5345-5354. arXiv:ge-qc/0507052.
 
-\bibitem{Bars} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
+@article{Bars} I. Bars, Gauge Duality, Conformal Symmetry, and Space-Time with Two Times, Phys. Rev. D
 58 (1998) hep-th/9803188.
 
-\bibitem{Cartan} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
+@article{Cartan} Cartan H. Démonstration homologique des théorèmes de périodicité de Bott, I. Séminaire
 Henri Cartan, Tome 12 (1959-1960) no. 2, Exposé no. 16, p. 1-16.
 
-\bibitem{Preskill} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
+@article{Preskill} Preskill, John. Do Black Holes Destroy Information? International Symposium on Black Holes,
 Membranes, Wormholes, and Superstrings. arXiv:hep-th/9209058. (1992).
 
-\bibitem{Nikolic} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
+@article{Nikolic} Nikolic, Hrvoje. "Resolving the black-hole information paradox by treating time on an equal
 footing with space". Physics Letters B. 678 (2): 218–221. arXiv:0905.0538. (2009)
 
-\bibitem{Koide} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
+@article{Koide} Koide Y., Fermion-Boson Two-Body Model of Quarks and Leptons and Cabibbo Mixing Lett.
 Nuovo Cimento 34, 201 (1982)
 
-\bibitem{Conway} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
+@article{Conway} J. H. Conway and S. P. Norton, Monstrous Moonshine, Bull. London Math. Soc. 11 (1979), no.
 3, 308–339
 
-\bibitem{Atiyah} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
+@article{Atiyah} Atiyah M. The fine-structure constant, 4th Heidelberg Laureate Forum conference (2018).
 blog.sciencenet.cn/home.php?mod=attachment&id=256716
 
-\bibitem{Polchinski} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
+@article{Polchinski} Polchinski J., String Theory, Vol 1, p. 22 (Cambridge University Press, 1998)
 
-\bibitem{Chauvin} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
+@book{Chauvin} R. Chauvin, Le Darwinisme ou la fin d'un mythe, ed. du Rocher, 1997
 
-\bibitem{Woit} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
+@article{Woit} Woit P. Not Even Wrong: The Failure of String Theory and the Search for Unity in Physical
 Law. Basic books, 2006
 
-\bibitem{Larin} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
+@article{Larin} Larin S.A, Quantum Chromodynamics with massive gluons. ArXiv:1304.8107, (2013)
 
-\bibitem{Durham} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
+@article{Durham} Durham I.T. 2006, Sir Arthur Eddington and the Foundations of Modern Physics arXiv:quant-
 ph/0603146v1 p.111.
 
-\bibitem{Widom} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
+@article{Widom} Widom A. Et al, Electromagnetic signals from Bacteria DNA, arXiv: 1104.311v2, 2012
 
-\bibitem{Salingaros} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
+@article{Salingaros} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
 Physics, June 1985, Volume 15, 6, pp 683–691
 
 \bibitem{Weigel} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
