--- a/references.bib
+++ b/references.bib
@@ -181,8 +181,8 @@ ph/0603146v1 p.111.
 @article{Salingaros} Salingaros N., Some Remarks on the Algebra of Eddington's E Numbers. Foundations of
 Physics, June 1985, Volume 15, 6, pp 683–691
 
-\bibitem{Weigel} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
+@article{Weigel} Weigel D., Veysseyre R and Carel C. Sur les symboles du groupe d'espace d'une wüstite de tri-
 incommensurabilité cubique est sur les groupes de Bravais de sa famlille cristalline dans
 l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, p. 349-352 (1987)
 
-\bibitem{Atiyah1} Atiyah M., private communication (December 2018)
+@misc{Atiyah1} Atiyah M., private communication (December 2018)
