--- a/chapter1.tex
+++ b/chapter1.tex
@@ -50,7 +50,7 @@ which is the simplest case of Eddington's statistical theory [2]. The position o
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , we obtain the double relation:
-$$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
+$$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
@@ -68,7 +68,7 @@ Group, which do not participate the so-called Space expansion. In fact, it suffi
 repulsive force proportional to galaxy groups separation distance, for explaining the canonical
 exponential recession. There is no need of the so-called `dark energy`, the repulsive force is simply
 the cosmological constant identified to $1/R^{2}$ . The distance for which this force exceeds attractive
-gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
+gravitation between galaxies is about $10^{6}$ light years \cite{fm1}[3], which corresponds, in the Topological
 Axis, to the Atiyah Constant $\Gamma$ , presented in the Section III, see Fig 1.
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
@@ -80,7 +80,6 @@ See Figure \ref{fig:figure_label} as an example on how to add figures to your th
 It is recommended that all figures to be kept in a separate directory.
 Note the `./figures/figure' in the example below.
 
-
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
@@ -88,52 +87,16 @@ Note the `./figures/figure' in the example below.
 \label{fig:figure_label}
 \end{figure}
 
-
-See Table \ref{table:table_ex} to learn how to create tables.
-
-\begin{table}
-\centering
-\caption{A table example}
-\begin{tabular}{ c c c c }
-\toprule
-\textbf{Dataset} & \textbf{Number of samples} & \textbf{Results} & \textbf{Results 2} \\
-\midrule                 
-  Ini & 1405 & 48 & 9 \\ 
-  Mid & 1196 & 52 & 10 \\ 
-  Fin & 1629 & 44 & 9 \\ 
-  Iso & 1372 & 39 & 8 \\ 
-  \bottomrule
-\end{tabular}
-\label{table:table_ex} 
-\end{table}
-
-This how you create a new definition: go to \ref{def:distance_function}.
-
-\begin{definition}
-Given a data space $\mathfrak{D}$, for any two data elements $x,y \in \mathfrak{D}$, a \textbf{distance function} $dist$, on $\mathfrak{D}$ is defined as:
-\begin{equation}
-dist: \mathfrak{D} \times \mathfrak{D} \longrightarrow \mathds{R}_{\geq 0} 
-\end{equation}
-where $dist$ has the following properties:
-\begin{compactitem}
-\item $dist(x,y)=0 \Leftrightarrow x=y$ (reflexivity)
-\item $dist(x,y) = dist(y,x)$ (symmetry)
-\end{compactitem}
-The pair $(\mathfrak{D},dist)$ is called a \textbf{distance space}.
-\label{def:distance_function}
-\end{definition}
-
-
 \section {Cosmic Holography, Toponic Quantification and Cosmos vastness}
 
-In the steady-state cosmologic model of Bondi, Gold and Hoyle, the Perfect Cosmological
+In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
 of galaxy groups, with time constant R/c being compensated by the appearance of m n massive
 neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius R is then defined by the
 Schwarszchild relation so that each point is the center of an equivalent R-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle , only devoted to 3D application [6]:
+Principle , only devoted to 3D application \cite{bousso}[6]:
 $S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}$
 where $l_{P} = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
@@ -198,7 +161,7 @@ Doppler dissymmetry of the cosmic background indicates the speed of our local gr
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 The mathematical continuity being excluded by the above Calculative Principle, the associated
 time $$\lambdabar_{M} /c = 1.33 \times 10^{-104}s$$ is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency about $10^{104}Hz$ [5].
+oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 
 \section {Evidence for Tachyonic Flickering Space-Time-Matter}
 
@@ -231,7 +194,7 @@ graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$.
 
 \section {The Kotov Cosmic Coherent Oscillation Period}
 
-The Kotov non-Doppler cosmic oscillation [9] is not considered seriously, since it seems to
+The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
@@ -239,12 +202,12 @@ characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relatio
 $$t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}$$
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
-1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
+1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$\cite{Pdc}. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 $$(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})}) = \sqrt{(GG_{F})}$$
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
-compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
+compatible with the well-elaborate $10^{-5}$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
 value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
@@ -258,7 +221,7 @@ With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible 
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
 climate variation, was also of flickering cosmic origin [12]. This hypothesis has been recently
 confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum
-process [13].
+process \cite{Kotov}.
 This Kotov perodicity implies a moderate climate variation. Now, a much larger one, involving
 glaciations, is tied to the Milankovitch period (100000 years), which presents also a straight
 temporal edge. Moreover, these two periods seem to be tied to the dimensions n = 24 and $\Gamma \approx 25$,
@@ -353,7 +316,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \section {The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
-speed $v_{1}$ is compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed $v_{1}$ is compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
@@ -398,7 +361,7 @@ $$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
 but it took 9 years to get the current article published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
 links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
 10^{-27} kg \cdot m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
-sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. This writes:
+sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
 $$t{\hbar,\rho_{c} ,G} = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}$$
 This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
@@ -420,7 +383,7 @@ Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
 where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 sporadic groups, which is
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
-between apparently no-connected mathematical theories [17]. The simplest interpretation of T is the
+between apparently no-connected mathematical theories \cite{Borcherds}[17]. The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
 Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: $$t{G, m_{e} , g_{PN} }
 = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
