--- a/chapter3.tex
+++ b/chapter3.tex
@@ -31,7 +31,7 @@ $$(p/n) (R/\lambdabar_e )^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3} ) 10
 The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with u ≈
 2×137. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
 that π is a intermediate rational calculation basis: in this case, the rational value π 0 = (355u-22)/
-(113u+7) corresponds to the above G value to 10 -8 precision.
+(113u+7) corresponds to the above G value to 10^{-8} precision.
 Since $(R/\lambdabar_e )^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
 involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
