--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,5 +1,9 @@
-
+%%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
+\nomenclature{UOP}{University of Paris 11}
 \chapter{Discussion}
+\label{chap:chapter_4}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 This article has answered several main problems : 1. Unification Gravitation-Quantum Physics,
 by rehabilitating the forgotten Eddington's statistical theory, 2. The real significance of Quantum
