--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,5 +1,9 @@
-
+%%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
+\nomenclature{UOP}{University of Paris 11}
 \chapter{Conclusions: Simplicity at work}
+\label{chap:chapter_5}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
