--- a/chapter2.tex
+++ b/chapter2.tex
@@ -19,7 +19,7 @@ Singular Prime in the series of the maximal primes appearing in the numerator of
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
 $$137 = 11^{2} + 4^{2}$$
-$$\frac{11}{4} = (\frac{\lambda_CNB}{\lambda_CMB})^{3}$$
+$$\frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}$$
 Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
@@ -48,11 +48,11 @@ prime, by $T^{2} = L^{3} = n^{6}$ , meaning the classical 6D space of classical 
 the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent
 study [18].
 This is the degenerate arithmetic form of the spatio-temporal holographic principle, It is also the
-3rd Kepler law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
+3rd Kepler's law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
-$T^{2} = L^{3} = M^{5} = n^{30}$ where M is a mass ratio. Recall that the lifetime of an unstable particle depend on the fifth power of its mass. This is called the Holic Principle, concerning only the apparent world. The complete Holic
+$T^{2} = L^{3} = M^{5} = n^{30}$ where M is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The complete Holic
 Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and a dimension 210.
 
 \section {The Information Conservation}
