--- a/chapter3.tex
+++ b/chapter3.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Since some dimensionless physical parameters are very precisely measured, it is natural to look for
+Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
 relations with mathematical constants different from the optimal basis e, such as π and γ ≈
 0.577215665, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
@@ -24,13 +24,13 @@ manifestation of the general neglectance of the Hierarchy Principle.
 
 The above Lenz-Wyler formula has a geometrical interpretation: 6π 5 is the product area-
 volume of a square of radius π. Now, the value f{26} of the Topological Function for the String
-main dimension 26 shows, to 0.1{percent}, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where 2π 2 a 3 is the area of a
+main dimension 26 shows, to 0.1\%, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2π^{2}a^{3}$ is the area of a
 4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3{percent}, 0.02{percent} and 1
 ppm:
-$$(p/n) (R/\lambdabar_e )^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3} ) 10 \approx \pi^{155}$$
-The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with u ≈
-2×137. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
-that π is a intermediate rational calculation basis: in this case, the rational value π 0 = (355u-22)/
+$$(p/n) (R/\lambdabar_{e})^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
+The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
+2 \times 137$. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
+that π is a intermediate rational calculation basis: in this case, the rational value π_{0} = (355u-22)/
 (113u+7) corresponds to the above G value to 10^{-8} precision.
 Since $(R/\lambdabar_e )^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
 involving again 137:
