--- a/chapter2.tex
+++ b/chapter2.tex
@@ -52,23 +52,23 @@ This is the degenerate arithmetic form of the spatio-temporal holographic princi
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
-$T^{2} = L^{3} = M^{5} = n^{30}$ where M is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The complete Holic
-Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and a dimension 210.
+$T^{2} = L^{3} = M^{5} = n^{30}$ where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The entire Holic
+Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and of dimension 210.
 
-\section {The Information Conservation}
+\section {The retention of Information}
 
 The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
 $$4\pi(R\prime/l_{CMB})^{2} \approx e^{a}$$
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But in a totally deterministic cosmos, there is no paradox. This question is
-connected with the black hole information paradox [20]. Independently of our approach, an
-argument in favor of a total conservation of information was tied to a non-evolution cosmology
+connected with the black hole information paradigm [20]. Independently of our approach, an
+argument in favor of a total retention of information was tied to a non-evolution cosmology
 [21], Moreover, we have shown that formalisms of Holography and Unitary Matrix Quantum
 Physics are very similar [3]. Note that $e^{a}$ is also compatible with the half volume of the proton, with
-the Planck length as unity.
+the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
-Time, specially the non-locality phenomena, they agree for complete determinism, ruining the
+Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
