--- a/chapter4.tex
+++ b/chapter4.tex
@@ -4,6 +4,7 @@
 \label{chap:chapter_4}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section {Discussion}
 
 This article has answered several main problems : 1. Unification Gravitation-Quantum Physics,
 by rehabilitating the forgotten Eddington's statistical theory, 2. The real significance of Quantum
