--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,9 +1,10 @@
 %%%%%%%%%%% Nomenclature for this chapter%%%%%%%%%%
 \nomenclature{UOP}{University of Paris 11}
-\chapter{Conclusions: Simplicity at work}
+\chapter{Conclusions}
 \label{chap:chapter_5}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section {Simplicity at work}
 
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
