--- a/chapter3.tex
+++ b/chapter3.tex
@@ -4,10 +4,11 @@
 \label{chap:chapter_3}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section {Basic mathematical constants}
 
 Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
-relations with mathematical constants different from the optimal basis e, such as π and γ ≈
-0.577215665, the Euler-Mascheroni constant, which appears already in the above single-electron
+relations with mathematical constants different from the optimal basis e, such as $\pi$ and $\gamma \approx
+0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
 \section {The Wyler's approach}
@@ -20,18 +21,18 @@ $$a/137 ≈ (6\pi^{5} H)^{1/2} /p$$
 Note that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
 manifestation of the general neglectance of the Hierarchy Principle.
 
-\section {The Archimedes constant π as a calculation basis}
+\section {The Archimedes constant $\pi$ as a calculation basis}
 
-The above Lenz-Wyler formula has a geometrical interpretation: 6π 5 is the product area-
-volume of a square of radius π. Now, the value f{26} of the Topological Function for the String
-main dimension 26 shows, to 0.1\%, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2π^{2}a^{3}$ is the area of a
-4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3{percent}, 0.02{percent} and 1
+The above Lenz-Wyler formula has a geometrical interpretation: $6\pi^{5}$ is the product area-
+volume of a square of radius $\pi$. Now, the value f{26} of the Topological Function for the String
+main dimension 26 renders, to 0.1\%, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2\pi^{2}a^{3}$ is the area of a
+4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
 ppm:
 $$(p/n) (R/\lambdabar_{e})^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
 The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
 2 \times 137$. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
-that π is a intermediate rational calculation basis: in this case, the rational value π_{0} = (355u-22)/
-(113u+7) corresponds to the above G value to 10^{-8} precision.
+that π is a intermediate rational calculation basis: in this case, the rational value $\pi_{0} = (355u-22)/
+(113u+7)$ corresponds to the above G value to 10^{-8} accuracy.
 Since $(R/\lambdabar_e )^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
 involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
@@ -101,22 +102,22 @@ incomplete and that Nature uses rational approximations for π.
 
 \section {The Atiyah constant}
 
-Michael Atiyah was a precursor in the search for unity of Mathematics and Physics. His last
+Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His last
 work in this domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplification term [24]. Indeed this
 constant $\Gamma$ simplifies some of the above relations:
 $$a_{w} = (137 \times 2 \Gamma)^3{$}$
 $$W \approx 137^{2} \Gamma / 3d^{e}$$
 $$( \Gamma\sqrt{a_{w}/\gamma d e )}^{1/3} \approx 4n\prime / \Gamma$$
-and the above relation giving a G shows a double form, the first one without any numerical factor:
+and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 $$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma )^{3} /F$$
 Now, as recalled before in the Holic Principle, the exponents represents the number of
 dimensions. So, this corresponds to a dimensional reduction, by eliminating 137, from 9D and 6D to
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
-Note that:
+Bearing in mind:
 $$m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV$$
-compatible with the Higgs Boson energy, Note that it corresponds to the dimension index $k \approx \pi: \gamma\Gamma
-\approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich climatic period. Now :
+compatible with the Higgs Boson energy, interesting to note the perfect match with the dimension index $k \approx \pi: \gamma\Gamma
+\approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
 $\Gamma \approx e^\pi + 2$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about n = Γ .
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
